add more link text

--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
     <body>
         <!--body is where all the actual content goes-->
         <h1>RUN BUDDY</h1>
-        What We Do
+        What We Do What You Do Your Trainers Reach Out
     </body>
 </html>
