--- a/index.html
+++ b/index.html
@@ -41,18 +41,21 @@
        </header>
         
        <!--hero/jumbotron-->
-       <section>
-            <div>
+       <section class="hero">
+            <div class="hero-form">
                 <h3>Get Started Today</h3>
                 <p>Fill out this form and one of our trainers will schedule a consult</p>
                 <!--add form element-->
                 <form>
+
                     <label for="name">Enter full name:</label>
-                    <input type="text" placeholder="Your Name" name="name" id="name"/>
+                    <input type="text" placeholder="Your Name" name="name" id="name" class="form-input"/>
+
                     <label for="email">Email Address:</label>
-                    <input type="email" placeholder="Email Address" name="email" id="email"/>
+                    <input type="email" placeholder="Email Address" name="email" id="email" class="form-input"/>
+                    
                     <label for="phone">Phone Number</label>
-                    <input type="tel" placeholder="Your Name" name="name" id="name"/>
+                    <input type="tel" placeholder="Your Name" name="name" id="name" class="form-input"/>
 
                     <p>
                         Have you worked out with a trainer before?
