--- a/index.html
+++ b/index.html
@@ -165,6 +165,30 @@
        <!--"reach out" section-->
        <section id="reach-out">
         <h2>Reach Out</h2>
+        <div class="contact-info">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2880.34225555844!2d-79.46646258407938!3d43.78651067911689!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b2dd98c05666b%3A0xe0f0f7b68b06b4f!2sSanofi%20Pasteur!5e0!3m2!1sen!2sca!4v1656611227077!5m2!1sen!2sca" 
+            width="400" 
+            height="400" 
+            style="border:0;" 
+            allowfullscreen="" 
+            loading="lazy" 
+            referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+        </div>
+        <div>
+            <h3>Run Buddy</h3>
+            <p>
+                Any questions or concerns before signing up? <br/>
+                Let us know and we'll be happy to talk to you
+            </p>
+            <address>
+                55 Main Street <br/>
+                Some Town, Ca <br/>
+                12345 <br/>
+                P: 555.RUB.BUDZ (555.786.2839) <br/>
+                E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+            </address>
+        </div>
        </section>
        
        <!--footer-->
