--- a/index.html
+++ b/index.html
@@ -178,7 +178,9 @@
        <section id="reach-out" class="contact">
         <h2 class="section-title secondary-border">Reach Out</h2>
         <div class="contact-info">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2880.34225555844!2d-79.46646258407938!3d43.78651067911689!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b2dd98c05666b%3A0xe0f0f7b68b06b4f!2sSanofi%20Pasteur!5e0!3m2!1sen!2sca!4v1656611227077!5m2!1sen!2sca" 
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2880.34225555844!2d-79.46646258407938!3d43.7
+            8651067911689!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b2dd98c05666b%3A0xe0f0f7b68b06b4f!2sSanofi%20Pa
+            steur!5e0!3m2!1sen!2sca!4v1656611227077!5m2!1sen!2sca" 
             style="border:0;" 
             allowfullscreen="" 
             loading="lazy" 
