--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             Run Buddy
         </title>
         <link rel="stylesheet" href="./assets/css/style.css"/>
+        <meta name="viewport" content="wifht=device-width, initial-scale=1.0"/>
     </head>
 
     <body>
