--- a/index.html
+++ b/index.html
@@ -68,18 +68,24 @@
                     
                     <label for="phone">Phone Number</label>
                     <input type="tel" placeholder="Your Name" name="name" id="name" class="form-input"/>
-
+                    
                     <p>
                         Have you worked out with a trainer before?
-                        <input type="radio" name="trainer-confirm" id="trainer-yes"/>
-                        <label for="trainer-yes">Yes</label>
-                        <input type="radio" name="trainer-confirm" id="trainer-no"/>
-                        <label for="trainer-no">No</label>
+                        <span class="radio-wrapper">
+                            <input type="radio" name="trainer-confirm" id="trainer-yes"/>
+                            <label for="trainer-yes">Yes</label>
+                        </span>
+                        <span class="radio-wrapper">
+                            <input type="radio" name="trainer-confrim" id="trainer-no"/>
+                            <label for="trainer-no">No</label>
+                        </span>
                     </p>
 
                     <p>
-                        I acknowledge that I am at least 18 years of age.
-                        <input type="checkbox" name="age-confirm" id="checkbox"/>
+                        <span class="checkbox-wrapper">
+                            <input type="checkbox" name="age-confirm" id="checkbox"/>
+                            <label for="checkbox">I acknowledge that I am at least 18 years of age.</label>
+                        </span>
                     </p>
 
                     <button type="submit">
